Update swagger gen
